[package]
name = "tap_runner"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
crossterm = "0.26.1"
duct = "0.13.6"
itertools = "0.10.5"
jaq-core = "0.10.0"
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tap_parser = "0.1.1"
tui = { package = "ratatui", version = "0.20.1" }
